--- a/RentalCars/RentalCars/Pages/Dealers/GetRentedCars.cshtml
+++ b/RentalCars/RentalCars/Pages/Dealers/GetRentedCars.cshtml
@@ -18,7 +18,7 @@
 			<th scope="col">Id</th>
 			<th scope="col">User Name</th>
 			<th scope="col">User Last Name</th>
-			<th scope="col">User Id</th>
+			<th scope="col">User Phone Number</th>
 			<th scope="col">Booking Date</th>
 			<th scope="col">Return Date</th>
 			<th scope="col">Car Id</th>
@@ -26,7 +26,7 @@
 			<th scope="col">Dealer Id</th>
 			<th scope="col">Approved by Dealer</th>
 			<th scope="col">Approved by Admin</th>
-			<th scope="col"></th>
+			<th scope="col">Is Paid</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -36,7 +36,7 @@
 				<td scope="col">@booking.Id</td>
 				<td scope="col">@booking.CustomerFirstName</td>
 				<td scope="col">@booking.CustomerLastName</td>
-				<td scope="col">@booking.CustomerId</td>
+				<td scope="col">@booking.CustomerPhoneNumber</td>
 				<td scope="col">@booking.BookingDate</td>
 				<td scope="col">@booking.ReturnDate</td>
 				<td scope="col">@booking.CarId</td>
@@ -44,10 +44,7 @@
 				<td scope="col">@booking.DealerId</td>
 				<td scope="col">@(booking.IsConfirmedByAdmin ? "Yes" : "No")</td>
 				<td scope="col">@(booking.IsConfirmedByDealer ? "Yes" : "No")</td>
-				<td scope="col">
-					<a asp-area="Admin" asp-controller="Booking" asp-action="Delete" asp-route-id="@booking.Id" asp-route-id="@booking.CarId" class="btn btn-danger float-right ml-3">Delete</a>
-					<a asp-area="" asp-controller="Dealers" asp-action="ChangeVisibility" asp-route-id="@booking.Id" class="btn btn-info float-right ml-3">@(booking.IsConfirmedByAdmin ? "Accept" : "Hide")</a>
-				</td>
+				<td scope="col">@(booking.IsPaid ? "Yes" : "No")</td>
 			</tr>
 		}
 	</tbody>
