--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -62,6 +62,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 						<li class="nav-item">
 						 <a class="nav-link" asp-area="Admin" asp-controller="Booking" asp-action="GetOfferts">Approved bookings<i class="nav-link"></i></a>
 						</li>
+						<li class="nav-item">
+						 <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Home">Admin Home Page<i class="nav-link"></i></a>
+						</li>
 					}
 					@if (book != null)
 					{
