--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -69,10 +69,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 					@if (book != null)
 					{
 						<li class="nav-item">
-						 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Pay">Pay<i class="nav-link"></i></a>
+						 <a class="nav-link" asp-area="" asp-controller="Payment" asp-action="Pay">Pay<i class="nav-link"></i></a>
 						</li>
 						<li class="nav-item">
-						 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="GetYouPaymentInfo">Payment info<i class="nav-link"></i></a>
+						 <a class="nav-link" asp-area="" asp-controller="Payment" asp-action="GetYouPaymentInfo">Payment info<i class="nav-link"></i></a>
 						</li>
 					}
 					@if (User.IsAdmin() == false)
