car location is implemented where is needed

--- a/RentalCars/RentalCars/Pages/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/All.cshtml
@@ -32,6 +32,7 @@
                     <option value="0" selected>Date Created</option>
                     <option value="1">Year</option>
                     <option value="2">Brand And Model</option>
+                    <option value="3">Location</option>
                 </select>
             </div>
         </div>
