--- a/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
@@ -36,6 +36,16 @@
                 <span asp-validation-for="Year" class="small text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Country"></label>
+                <input asp-for="Country" class="form-control" placeholder="Bulgaria, Romania, etc...">
+                <span asp-validation-for="Country" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" placeholder="Sofia, Bucharest,    etc...">
+                <span asp-validation-for="City" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CategoryId"></label>
                 <select asp-for="CategoryId" class="form-control">
                     @foreach (var category in Model.Categories)
